packages/parser/test/tokenizer/E0004.txt
'
===== err =====
/test/tokenizer/E0004.txt:1:1: SyntaxError: E0002 - Unterminated character literal
1 | '
  | ^
